--- a/Server/src/main/webapp/agent.html
+++ b/Server/src/main/webapp/agent.html
@@ -4,7 +4,7 @@
     <title>AgentPage</title>
     <script src="jquery-1.10.2.min.js"></script>
     <link rel="stylesheet" href="css/agent.css">
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 
 </head>
 <body>
@@ -21,21 +21,40 @@
 <ul id="Info"></ul>
 
 <div class="tab_content">
+    <div class="row">
+        <div class="col-md-6 mx-auto">
+
     <label id="label-Max clients number">Max clients number
-        <input type="number" value="1" min="1" max="10" id="maximum-number-of-clients" class="form-control">
+        <input type="number" value="1" min="1" max="10" id="maximum-number-of-clients" class="form-control" >
     </label>
+
 
     <label id="labelRole" hidden="hidden">Choose your role</label>
     <select id="userRole" class="web-client-role-selector" hidden="hidden">
         <option>agent</option>
     </select>
-    <br>
-    <br>
-    <label id="labelName">Enter your name </label>
-    <input type="text" id="userName" class="web-client-username-input"/>
-    <input id="RegisterButton" class="web-client-prompt-submit" type="button" value="Register" onclick="register();">
-    <br>
-    <br>
+
+
+    <div class="form-group">
+            <label id="labelName">Enter your name </label>
+            <input type="text"  class="form-control form-control-lg rounded-0"   id="userName" />
+            <div>
+
+            <div class="form-group">
+                <label id="agentPassword">Enter Password</label>
+                <input type="password"  required="" autocomplete="new-password" class="form-control form-control-lg rounded-0" id="userPassword" />
+
+                <div>
+                    <div class="form-group">
+                    <input id="RegisterButton" class="button" type="button" value="Register" onclick="register();">
+                    </div>
+                    <br>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+   </div>
 </div>
 </body>
 
@@ -106,7 +125,7 @@
             'message': userRole.value + ' ' + userName.value + ' ',
             'TypeOfMessage': '/register',
             'maxCountActiveChat': maximum_number_of_clients.value,
-            'TypeofAgent':'web'
+            'TypeofAgent': 'web'
         }));
     }
 
@@ -121,7 +140,7 @@
         if (jsonData.TypeOfMessage == "Register") {
 
             addMessage('Info:' + 'Agent ' + jsonData.agentName + ' is registered');
-           // addMessage('Info: Please wait for the connected client prior to start the dialog. There are no connected clients now.')
+            // addMessage('Info: Please wait for the connected client prior to start the dialog. There are no connected clients now.')
         }
 
         if (jsonData.TypeOfMessage == "find") {
